manifests/minio/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: minio-deployment
  namespace: minio
  labels:
    app: minio
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: affinity/minio
                operator: In
                values:
                - "true"
      containers:
      # FIXME add sidekick with caddy+login/github-oauth
      - name: minio
        # image: minio/minio:RELEASE.2017-05-05T01-14-51Z
        image: minio/minio:RELEASE.2017-06-13T19-01-01Z
        args:
        - server
        - /storage
        ports:
        - containerPort: 9000
          hostPort: 9000
        volumeMounts:
        - name: storage
          mountPath: "/storage"
      volumes:
      - name: storage
        hostPath:
          path: /srv/minio
        # persistentVolumeClaim:
        #   claimName: minio-pv-claim
