manifests/minio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: minio
  labels:
    app: minio
  annotations:
    # ingress.kubernetes.io/auth-secret: elasticsearch-basic-auth
    # ingress.kubernetes.io/auth-type: basic
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: minio.codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: minio
          servicePort: 9000
        path: /
  tls:
  - hosts:
    - minio.codeformuenster.org
    secretName: minio-tls
